作者审核验证接口重写
